(develop) allow svg group tree to be fetched from the svg_t class

--- a/kinu-svg/CMakeLists.txt
+++ b/kinu-svg/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(kinu-svg STATIC
 
 target_link_libraries(kinu-svg PUBLIC
   nanosvg
+  pugixml::shared
 )
 
 target_include_directories(kinu-svg PUBLIC
