--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,15 @@ cmake_minimum_required(VERSION 3.21.0)
 project(kinucnc VERSION 1.0.0 LANGUAGES CXX)
 
 # setup toolchain
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # options
 option(KINU_TESTS "enable unit tests compilation (requires gtest)" ON)
+option(KINU_SAMPLES "enable samples compilation" ON)
+
+# threads
+find_package(Threads REQUIRED)
 
 # qt5
 set(CMAKE_AUTOMOC ON)
@@ -28,4 +32,4 @@ endif(KINU_TESTS)
 add_subdirectory(vendor)
 
 # kinu-svg
-add_subdirectory(kinu-svg)
+add_subdirectory(kinu-core)
