(develop) preparing for the addition of more bspline processors

--- a/kinu-core/CMakeLists.txt
+++ b/kinu-core/CMakeLists.txt
@@ -1,6 +1,7 @@
 # target: kinu-svg
 add_library(kinu-svg STATIC
   src/svg.cpp
+  src/bspline_processors.cpp
 )
 
 target_link_libraries(kinu-svg PUBLIC
