(develop) added some geometry utilities, looking for a new way to create inside shape using opencv

--- a/kinu-core/CMakeLists.txt
+++ b/kinu-core/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_library(kinu-svg STATIC
   src/svg.cpp
   src/shape_processors.cpp
+  src/geometry.cpp
 )
 
 target_link_libraries(kinu-svg PUBLIC
